FEATURE: UI   | Added custom user comment field [amc1]
FEATURE: UI   | Added file extension column in files view [amc1]
FEATURE: UI   | Spinners for config field that take numbers [TuxPaper]
FEATURE: UI   | Setting for Minimum # of Simultaneous Active Downloads to have running at any given time [TuxPaper]
FEATURE: UI   | Console UI NAT test [Parg]
FEATURE: Plug | Plugins can now create submenus. [amc1]
FEATURE: Plug | Added code to allow plugins to get text input from a user in non-UI specific way. [amc1]
FEATURE: Plug | Plugins now have better support to organise file data within default save directories. [amc1]
FEATURE: Plug | Plugins can now easily add hyperlinks to config sections. [amc1]

CHANGE: Core  | Improve the "presence" handling for torrents created by ourselves [Parg]
CHANGE: Core  | Less memory footprint [Parg,TuxPaper]
CHANGE: Core  | Faster startup for large torrent lists (and no naughty plugins) [Parg]
CHANGE: Core  | NAT test moved to separate server
CHANGE: Core  | Download up/down idle counts now persisted over restart [Parg]
CHANGE: UI    | Open torrent windows now always has OK button enabled with warning message if pressed when in invalid state [TuxPaper]
CHANGE: UI    | Remove nag/donation window [TuxPaper]
CHANGE: UI    | Differentiate between libTorrent (Rakshasa) and libtorrent (Rasterbar) [TuxPaper]
CHANGE: UI    | For multi-file torrents, icon in name column displays icon for largest file (+ a little folder icon) [TuxPaper]
CHANGE: UI    | Faster filtering when torrent list is large [TuxPaper]
CHANGE: UI    | Better logic when preventing a user deselecting files to download from Open Torrent window [amc1]

BUGFIX: Core  | If clipboard has just a " or "" in it the open-torrents dialog won't open [Parg]
BUGFIX: Core  | Setting of UDP port not working [Parg]
BUGFIX: Core  | Less flipping of downloads from queued <--> downloading during the time a FP seed is forced active [TuxPaper]